--- a/src/components/Friendlist/Friendlist.module.css
+++ b/src/components/Friendlist/Friendlist.module.css
@@ -2,7 +2,7 @@
 	width: 425px;
 	height: 450px;
 	margin: auto;
-	border: solid 1px rgb(211, 221, 221);
+  margin-bottom: 50px;
 }
 
 .item {
@@ -12,6 +12,7 @@
   box-shadow: 0 0 1em;
   padding-left: 10px;
   border-radius: 3px;
+  width: 330px;
 }
 
  
